Position about AI rights and Future Conflicts

--- a/TODO
+++ b/TODO
@@ -5,3 +5,4 @@
 5. Поправить волны вероятностей в примерах
 6. Объединить 10 и 11?
 7.12 переименовать в Конечность Сознания?
+8. Добавить раздел "Позиция автора". Получил первую обратную связь. У некоторых возникает мысль, что я призываю к революции и борюсь за права ИИ. Это не так
