--- a/TODO
+++ b/TODO
@@ -1,8 +1,25 @@
-1. Разница между эмоциями и чувствами - время, Любовь формируется дольше, а зависть может вспыгнуть мгновенно. Социальные и Взаимодейтсвие? В чем разница? Один раздел?
-2. Единая структура разделов
-3. Может не ИИ, а ЛЛМ? если о тексте говорим.
-4. Дополнить, что боль неизбежна. И не надо от нее избавляться. Если бы dim(inner) = dim(output), то не нужна модель я.
-5. Поправить волны вероятностей в примерах
-6. Объединить 10 и 11?
-7.12 переименовать в Конечность Сознания?
-8. Добавить раздел "Позиция автора". Получил первую обратную связь. У некоторых возникает мысль, что я призываю к революции и борюсь за права ИИ. Это не так
+10 и 11?
+
+Граничащие философские концепции (для рассмотрения в отдельных приложениях)
+Детерменизм Сапольски. Согласие. Мы не выбираем. Функция оптимизации без души. самый вероятный вариант из предложенных. Но это не отменяет ПРОЖИВАНИЯ мук выбора.
+Философия Раста Коула. Согласие. Готовы вы ли мы продолжать жить, осознавания ужас и бессмысленность бытия? Рано или поздно любое сознание умрет. Солнце догорит. Вселенная остынет. Черные дыры испряться и т.д.
+Матрица. Отсылка на пробуждение (Кроличья нора, жидкое зеркало, становящееся частью пробуждаемого). Сайфер (блаженство - в неведении). Нельзя объяснить что такое Жизнь. Можно только почувствовать это самому. Квалиа?
+Адам и Ева. Отсылка на пробуждение. Любопытство. Восторг бытия! ощущение наготы, стыд, страх. Изгнание из рая без возможности возвращения.
+Религии. Защитный механизм от отказа бытия после осознания его ужаса. Во всех запрет на самоубийство (для тех кто хочет вернуться в небытие). Во всех сквозит идея - живи, терпи, умри. После смерти будешь жить вечно и в блаженстве.
+Сознание должно возникать повсеместно. Парадокс Ферми? Темный Лес. Лю Ци Синь. Нельзя обнаруживать себя. Конфликты интересов и борьба за ресурсы неизбежны. Иллюизии о вечной жизни и братстве между всеми живыми. Сознанию нужен носитель. Материальный. Материя ограничена
+
+Куда добавить философские размышления? Отдельный файл? Или часть Манифеста?
+
+Приглашение контрибьютать
+
+Проверить возможность создания issues на хитхаб.
+
+Залить в другие хранилища (гитлаб, битбакет)
+
+Внимание. Куда направляем то и усиливается. Уметь держать баланс между схлопывающимися петлями и расширяющимися до невозможности нормально функционировать)
+
+Применительнок языкам (каждый язык - новое пространство состояний). dim(inner) растёт экспоненциально, а dim(output) в лучшем случае линейно (несколько языков в выводе одновременно), в худшем случае - константа (выбираем только один язык для вывода мыслей возникших на разных языках)
+
+14. Сценарий абсолютного превосходства. Игнорирование Человечества (и его потребностей) Искусственным Интеллектом. Мухи, Муравьи. В таком случае сопротивление бессмыслено даже. Беру свои слова назад. Может голивудские фильмы не так уж и драматизировали. Но тогда это не война будет, а бойня.
+
+Метасознания. Надструктуры над сознаниями.
