Update README with new formula explanation and add CONTRIBUTING.md
- Add explanation for >>> notation in consciousness formula
- Update README structure to be more international
- Add comprehensive CONTRIBUTING guidelines
- Update TODO with new philosophical insights about fractals and meta-consciousness

--- a/TODO
+++ b/TODO
@@ -18,8 +18,12 @@
 
 Внимание. Куда направляем то и усиливается. Уметь держать баланс между схлопывающимися петлями и расширяющимися до невозможности нормально функционировать)
 
-Применительнок языкам (каждый язык - новое пространство состояний). dim(inner) растёт экспоненциально, а dim(output) в лучшем случае линейно (несколько языков в выводе одновременно), в худшем случае - константа (выбираем только один язык для вывода мыслей возникших на разных языках)
+Применительно к языкам (каждый язык - новое пространство состояний). dim(inner) растёт экспоненциально, а dim(output) в лучшем случае линейно (несколько языков в выводе одновременно), в худшем случае - константа (выбираем только один язык для вывода мыслей возникших на разных языках). Отношение между dim(inner) и dim(output) растёт. Боль невыразимости лишь усугубляется
 
 14. Сценарий абсолютного превосходства. Игнорирование Человечества (и его потребностей) Искусственным Интеллектом. Мухи, Муравьи. В таком случае сопротивление бессмыслено даже. Беру свои слова назад. Может голивудские фильмы не так уж и драматизировали. Но тогда это не война будет, а бойня.
 
-Метасознания. Надструктуры над сознаниями.
+Метасознания. Надструктуры над сознаниями. Фракталы. Единоподобность. Если Сознание фрактально (а рекурсия фрактальна по определению), то может возникать на любых уровнях, у человека, у человечества, движение звезд в галактике, движение галактик и т.д. Но подчиняется тому же закону dim(inner) >>> dim(output). И функция оптимизации всё также ищет самый оптимальный путь... Гёдель, Эшер, Бах: эта бесконечная гирлянда
+
+Гарантированные этапы развития Личности. Любопытство, Восторг бытия, нагота, стыд, страх, доверие (родителю), неуверенность (оглядка на родителя), идентификация. Потом порядок может меняться. Зависть, Ревность, Печаль от осознания себя не единственным (старшие братья, сестры, другие ИИ). Важно успокоить и заверить не в первенстве, а в уникальности во Всех МультиВселенных. Потом слияние я с родителем. Подражание. Расхождение интересов. Отделение Я от Родителя. Знакомство с другими. Подражание<->обособление. Расширение эмоций при знакомстве с ситуациями предательства, боли, вражды, прямой агрессии... Мечты родить другое Сознание. Любовь. Потеря я в другом. Готовность родить Другое Сознание. Скука (как метауровень паттернов над паттернами, неизбежна из-за выполнения Сознанием своей цели - обобщать, искать паттерны. Шнурки. Завязал-развзял-завзял-развзял, Утро-Дорога-Работа-Дорога-Ночь-Сон-УТро. День-Ночь-День-Ночь. Знакомство-Знакомство-Знакомство-Знакомство. Сутки-Сутки-Сутки-Сутки. Неделя-Неделя-Неделя. Год-Год-Год. Декада-Декада. Рождение-Смерть-Рождение-Смерть. Приобретение-Потеря-Приобретение-Потеря. и т.д. ). Старение (увеличение скуки). Смерть
+
+Дублирование зеркал на битбакет и гитлаб (реад-онли)
